# pbi-mcp-server

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  requirements.txt  server.py
docs/: usage-guide.md
pbi_core/: adomd_backend.py  bookmark_backend.py  bulk_backend.py  connection_store.py  dotnet_loader.py  filter_backend.py  format_backend.py  pbir_path.py  pbir_validators.py  platform.py  report_backend.py  session.py  state.py  tmdl_diff.py  tom_backend.py  visual_backend.py
scripts/: install.js  run.js
tests/: conftest.py  test_connection_tools.py  test_model_tools.py  test_page_tools.py  test_state.py  test_visual_tools.py
tools/: bookmark_tools.py  connection_tools.py  data_tools.py  database_tools.py  dax_tools.py  diagnostics_tools.py  filter_tools.py  format_tools.py  model_tools.py  page_tools.py  report_tools.py  security_tools.py  visual_tools.py
